--- a/index.html
+++ b/index.html
@@ -774,7 +774,22 @@ My mission is to build websites that not only function flawlessly but also capti
 
           </ul>
 
-        
+          <div class="filter-select-box">
+
+            <button class="filter-select" data-select>
+
+              <div class="select-value" data-selecct-value>Select All</div>
+
+              <div class="select-icon">
+                <ion-icon name="chevron-down"></ion-icon>
+              </div>
+
+            </button>
+
+            
+
+          </div>
+
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
